deploy/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: conference-ingress 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: UI_URL
    http: 
      paths:
      - path: /
        backend:
          serviceName: ui 
          servicePort: 38080
      - path: /callback
        backend:
          serviceName: ui 
          servicePort: 38080
  - host: API_URL
    http:
      paths:
      - path: /
        backend:
          serviceName: apollo 
          servicePort: 34000
